force-app/main/default/objects/Campaign/fields/Is_Approved_To_Launch__c.field-meta.xml
<CustomField>
    <fullName>Is_Approved_To_Launch__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Approved To Launch</label>
    <type>Checkbox</type>
</CustomField>