force-app/main/default/objects/Campaign/fields/Launch_Approved_Date__c.field-meta.xml
<CustomField>
    <fullName>Launch_Approved_Date__c</fullName>
    <label>Launch Approved Date</label>
    <type>DateTime</type>
</CustomField>