force-app/main/default/objects/Campaign/fields/Launch_Approver__c.field-meta.xml
<CustomField>
    <fullName>Launch_Approver__c</fullName>
    <label>Launch Approver</label>
    <referenceTo>User</referenceTo>
    <type>Lookup</type>
</CustomField>