force-app/main/default/objects/Campaign/fields/Launch_Rejected_Reason__c.field-meta.xml
<CustomField>
    <fullName>Launch_Rejected_Reason__c</fullName>
    <label>Launch Rejected Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>